Fix panel overflow

--- a/packages/ui/src/scss/partials/base-components/_panel.scss
+++ b/packages/ui/src/scss/partials/base-components/_panel.scss
@@ -2,7 +2,6 @@
 	z-index: var(--ui-panels-index);
 	position: absolute;
 	height: auto;
-	overflow: hidden;
 	border-radius: var(--radius-0);
 
 	width: 100%;
